--- a/404.html
+++ b/404.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta http-equiv="refresh" content="0; URL='/rock-paper-scissors/'" />
+    <meta http-equiv="refresh" content="0; URL='/rock-paper-scissors/'" />
   </head>
   <body>
     <p>Redirecting...</p>
