--- a/404.html
+++ b/404.html
@@ -2,13 +2,18 @@
 <html>
   <head>
     <script type="text/javascript">
-      // Preserve the full URL and redirect to it
-      var redirectUrl = window.location.pathname;
+      // Define the base URL (GitHub Pages subdirectory)
       var baseUrl = "/rock-paper-scissors"; // Ensure this matches your repo name
-      var finalRedirect = baseUrl + redirectUrl;
 
-      // Redirect to the preserved URL
-      window.location.replace(finalRedirect);
+      // Get the current path (excluding the baseUrl)
+      var redirectUrl = window.location.pathname;
+
+      // Check if the baseUrl is already part of the redirectUrl
+      if (!redirectUrl.startsWith(baseUrl)) {
+        // If baseUrl is not in the path, prepend it and redirect
+        var finalRedirect = baseUrl + redirectUrl;
+        window.location.replace(finalRedirect);
+      }
     </script>
   </head>
   <body>
