--- a/404.html
+++ b/404.html
@@ -1,20 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script type="text/javascript">
-      // Define the base URL (GitHub Pages subdirectory)
-      var baseUrl = "/rock-paper-scissors"; // Ensure this matches your repo name
-
-      // Get the current path (excluding the baseUrl)
-      var redirectUrl = window.location.pathname;
-
-      // Check if the baseUrl is already part of the redirectUrl
-      if (!redirectUrl.startsWith(baseUrl)) {
-        // If baseUrl is not in the path, prepend it and redirect
-        var finalRedirect = baseUrl + redirectUrl;
-        window.location.replace(finalRedirect);
-      }
-    </script>
+    <meta http-equiv="refresh" content="0; URL='/rock-paper-scissors/'" />
   </head>
   <body>
     <p>Redirecting...</p>
